applications/mealie/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: mealie
  namespace: app-mealie
  labels:
    app: mealie
spec:
  host: meali.apps.ocp.weyrich.dev
  to:
    kind: Service
    name: mealie
    weight: 100
  port:
    targetPort: 9000
  tls:
    termination: edge
  wildcardPolicy: None
